ed